feat(database): add comprehensive schema and seed data for training management
- Add new enums for user roles, fee periods (including semi-annual), payment methods, statuses,
  note types, attendance statuses, and notification types and methods
- Create tables for users, students, parents, groups (with coach and assistant coach),
  group histories, fee types, payments, notes, trainings, training sessions, attendances,
  notifications, trainers, and student-parents relations with appropriate indexes and constraints
- Define foreign key constraints to model relations between entities with cascade or restrict rules
- Add new fields for coach and assistant coach in the groups table with relation mappings
- Create indexes for efficient querying on students, payments, notifications, and other key entities
- Seed initial data with sample trainers, students, parents, and link students to groups and parents
- Update environment and configuration files to improve database connection pooling and Next.js
  build cache disabling for development
- Update package dependencies to latest Next.js and React versions with legacy peer deps enabled
- Add npm scripts for database optimization, cleaning cache, warming up dev server, and migrations
- Add scripts and SQL file for PostgreSQL database performance optimization via vacuum and analyze commands

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "npm run clean && next dev",
+    "dev:warm": "npm run dev & npm run warmup",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "clean": "node -e \"const fs=require('fs');const path=require('path');['.next','node_modules/.cache','.turbo'].forEach(d=>{const p=path.join(process.cwd(),d);if(fs.existsSync(p))fs.rmSync(p,{recursive:true,force:true})})\"",
+    "warmup": "tsx scripts/warmup.ts",
+    "db:optimize": "tsx scripts/optimize-db.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
