--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres123@localhost:5477/aidat_takip"
+DATABASE_URL="postgresql://postgres:postgres123@localhost:5477/aidat_takip?connection_limit=10&pool_timeout=20&connect_timeout=10"
 JWT_SECRET="your-jwt-secret-change-in-production"
 NEXTAUTH_SECRET="your-nextauth-secret-change-in-production"
 NEXTAUTH_URL="http://localhost:3000"
