--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,23 @@ services:
     image: adminer
     restart: always
     ports:
-      - "8080:8080"
+      - "8077:8080"
+    depends_on:
+      - postgres
+
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "3301:3000"
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres123@postgres:5432/aidat_takip?connection_limit=10&pool_timeout=20&connect_timeout=10
+      JWT_SECRET: your-jwt-secret-change-in-production
+      NEXTAUTH_SECRET: your-nextauth-secret-change-in-production
+      NEXTAUTH_URL: http://localhost:3000
+      NODE_ENV: production
     depends_on:
       - postgres
 
