chore(deploy): add production deployment script and update env settings
- Add deploy-production.sh script for automated production deployment
- Update .env with production JWT and NextAuth secrets and production URL
- Add .env and related files to .gitignore for security
- Update docker-compose.yml with production secrets and environment variables
- Adjust exposed port to 3077 matching production URL
- Include deployment steps to stop containers, rebuild, verify environment, and check database connection

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL="postgresql://postgres:postgres123@localhost:5477/aidat_takip?connection_limit=10&pool_timeout=20&connect_timeout=10"
-JWT_SECRET="your-jwt-secret-change-in-production"
-NEXTAUTH_SECRET="your-nextauth-secret-change-in-production"
-NEXTAUTH_URL="http://localhost:3000"
+JWT_SECRET="ktkrtYO5vierjap8IKMYv3a9hzKEAR1ZZRSmU2068c4="
+NEXTAUTH_SECRET="imxFyaBJJSLRKslAcneO9xMoAXiBYB1sboEoTqygM0c="
+NEXTAUTH_URL="http://portal.spormanage.com.tr:3077"
