--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Environment variables
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # Dependencies
 node_modules/
