chore(git): update .gitignore to exclude keys, dumps, and scripts
- Added rules to ignore secret key files (*.key, *.pem, *.crt)
- Added ignore patterns for environment and runtime files such as .npmrc
- Excluded local database dumps except init.sql
- Ignored deployment and diagnostic shell scripts (deploy-*.sh, diagnose-*.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,19 @@ docker-compose.override.yml
 
 # Prisma
 prisma/migrations/*/migration.sql.bak
+
+# Secrets and keys
+*.key
+*.pem
+*.crt
+
+# Environment and runtime
+.npmrc
+
+# Local database dumps (keep init.sql tracked)
+aidat_takip.sql
+*.dump
+
+# Deployment and diagnostics scripts
+deploy-*.sh
+diagnose-*.sh
